# BRIEF

./: .gitignore  BENCH.md  CMakeLists.txt  README.md  compute_brief_common.h  compute_brief_cpu.cpp  compute_brief_cuda.cpp  compute_brief_cuda.cu  main.cpp  test.cpp  test.py  timer.h
